Update : 1) Seperated main from source + cmake update 2) Added print_battle_info() to Creature_Stack 3) Added comments to functions in Creature and Creature_Stack 4) Added header for tests with comments

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -1,37 +1,35 @@
-add_executable(Heroes3 main.cpp)
-
 add_library(
     source
 
-    # Terrains.h
+    Terrains.h
 
-    # Battle.h
-    # Position.h
+    Battle.h
+    Position.h
 
-    # Morale_Luck.h
-    # Secondary_Skill.h
+    Morale_Luck.h
+    Secondary_Skill.h
     Secondary_Skill_List.cpp
-    # Skill_level.h
-    # Specialty.h
+    Skill_level.h
+    Specialty.h
     Specialty_List.cpp
 
-    # Item.h
+    Item.h
 
-    # Resources.h
-    # Team.h
+    Resources.h
+    Team.h
 
-    # Spell.h
-    # Spellbook.h
+    Spell.h
+    Spellbook.h
 
-    # Faction.h
+    Faction.h
 
-    # Creature.h
+    Creature.h
     Creature.cpp
     Creature_List.cpp
-    # Creature_Stack.h
+    Creature_Stack.h
     Creature_Stack.cpp
 
-    # Hero.h
+    Hero.h
     Hero.cpp
     Hero_List.cpp
     )
@@ -39,9 +37,3 @@ add_library(
 set_target_properties(source PROPERTIES LINKER_LANGUAGE CXX)
 
 target_include_directories(source PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
-
-target_link_libraries(Heroes3 PRIVATE source)
-
-target_link_libraries(Heroes3 PRIVATE utilities)
-
-target_link_libraries(Heroes3 PRIVATE tests)
