--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(Heroes3 VERSION 0.1.0 LANGUAGES C CXX)
 
 add_subdirectory(utilities)
 
+add_subdirectory(source)
+
 add_subdirectory(tests)
 
-add_subdirectory(source)
+add_subdirectory(main)
