Update : 1) Small changes in parsing creatures special abilities when constring Creture_List. 2) Heroes now have both Class and Role, set when constructing. 3) Added methods to Hero class for primary skills update and bonuses. 4) Heroes have a level-experience map and can gain experience and levels according to the map. 5) Heroes get bonuses in primary skills according to Class when leveling up. 6) Heroes have methods for items : pick up, equip, unequip and store in treasure chest. For now hero's armies gain attack and defense bonuses from heroes items. More item bonuses will be implemented in future. 7) Stacks assinged and remove from hero's armies get bonuses from hero's primary skills. 8) New methods in Item class. Items bonuses get parsed. More to come in future. 9) Item_List update. More to come in future. 10) Added tests for item constructing and item bonuses for hero. 11) Updated test for heroes and army bonuses. 12) Cosmetic changes.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -31,6 +31,8 @@ add_library(
     Creature_Stack.h
     Creature_Stack.cpp
 
+    Level_Experience.h
+    Skills_Probability.h
     Hero.h
     Hero.cpp
     Hero_List.cpp
