Update : 1) Added native terrain to creatures. 2) Added Team.cpp with global functions. 3) Created struct Battlefield_tile to construct the battlefield in Battle class + added its corresponding files. 4) Added functionality to Battle class and added Battle.cpp 5) Added a test for positioning armies on battlefield. 6) CMakeLists update. 7) Cosmetic changes.

--- a/source/CMakeLists.txt
+++ b/source/CMakeLists.txt
@@ -4,6 +4,9 @@ add_library(
     Terrains.h
 
     Battle.h
+    Battle.cpp
+    Battlefield_Tile.h
+    Battlefield_Tile.cpp
     Position.h
 
     Morale_Luck.h
@@ -19,6 +22,7 @@ add_library(
 
     Resources.h
     Team.h
+    Team.cpp
 
     Spell.h
     Spellbook.h
